# no-way-jose

./: .gitignore  .tool-versions  CHANGELOG.md  Justfile  README.md  checksum-Elixir.NoWayJose.Native.exs  mix.exs
.github/workflows/: build-nifs.yml  ci.yml  release.yml
config/: config.exs
lib/: no_way_jose.ex
lib/no_way_jose/: application.ex  header.ex  jwk.ex  jwks.ex  key.ex  key_store.ex  native.ex  signer.ex  validation_opts.ex  verifier.ex
lib/no_way_jose/jwks/: fetcher.ex  http_client.ex
native/nowayjose/: Cargo.toml
native/nowayjose/.cargo/: config
native/nowayjose/src/: atoms.rs  ec.rs  jwks.rs  key_resource.rs  lib.rs  rsa.rs  serde.rs  signer.rs  verifier.rs
native/nowayjose/src/serde/: de.rs  error.rs  ser.rs  util.rs  utils.rs
native/nowayjose_testutils/: Cargo.toml
native/nowayjose_testutils/src/: lib.rs  rsa.rs
test/: no_way_jose_test.exs  test_helper.exs
test/support/: test_utils.ex
