[package]
name = "nowayjose"
version = "0.1.0"
authors = ["Sonny Scroggin <sonny@scrogg.in>"]
edition = "2018"

[lib]
name = "nowayjose"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
jsonwebtoken = "8"
once_cell = "1.18.0"
openssl = "0.10"
rustler = { version = "0.30", default-features = false, features = ["derive", "nif_version_2_15"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
