[package]
name = "nowayjose"
version = "0.1.0"
authors = ["Sonny Scroggin <sonny@scrogg.in>"]
edition = "2021"

[lib]
name = "nowayjose"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
p384 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
rand = "0.8"
rsa = { version = "0.9", features = ["pem"] }
rustler = { version = "0.37", features = ["derive", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
